tests/ui/solver-attribute/multiple-attrs/expected
error: only one '#[kani::solver]' attribute is allowed per harness\
test.rs:\
|\
| #[kani::solver(kissat)]\
| ^^^^^^^^^^^^^^^^^^^^^^^
error: aborting due to 1 previous error
